--- a/views/user/admin.jade
+++ b/views/user/admin.jade
@@ -11,7 +11,7 @@ block body
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand(href='index.html') SB Admin
+					a.navbar-brand(href='user/admin') SB Admin
 				// Top Menu Items
 				ul.nav.navbar-right.top-nav
 					li.dropdown
@@ -109,7 +109,7 @@ block body
 									|  Settings
 							li.divider
 							li
-								a(href='#')
+								a(href='session/new')
 									i.fa.fa-fw.fa-power-off
 									|  Log Out
 				// Sidebar Menu Items - These collapse to the responsive navigation menu on small screens
