--- a/assets/styles/css/sb-admin-rtl.css
+++ b/assets/styles/css/sb-admin-rtl.css
@@ -1,5 +1,5 @@
 
 @media (min-width: 768px){
-  #wrapper {padding-right: 225px; padding-left: 0;}
+  #wrapper {padding-right: 0; padding-left: 0;}
   .side-nav{right: 0;left: auto;}
 }
