--- a/views/index.jade
+++ b/views/index.jade
@@ -1,466 +1,16 @@
 block vars
-	-title="365Mobile - Smartphone"
+	-title="Hotdeal.vn"
 extends layouts/layout
-block main
-	.hm-sec-blk
-		.main-menu-slider-blk
-			.container
-				
-			
+block main	
 	.hm-sec-blk
 		.container
-			ul(class="nav nav-tabs" role="tablist")
-				li(role="presentation" class="active")
-					a(href="#hotphone" role="tab" data-toggle="tab")
-						|ĐIỆN THOẠI BÁN CHẠY
-				li(role="presentation")
-					a(href="#prd-chip" role="tab" data-toggle="tab")
-						|HÀNG XẢ KHO GIÁ RẺ
-			div(class="tab-content tab-blk")
-				div(role="tabpanel" class="tab-pane active" id="hotphone")
-					a(href="category.html").view-all
-						p Xem tất cả điện thoại bán chạy nhất &rsaquo;
-					.tab-prd.prd-img-blk
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Sony Xperia M4 Aqua Dual
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-dec-price
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Blackberry classic 11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-new
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy E5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-hot
-							span.box-present
-								<i class="fa fa-gift" aria-hidden="true"></i>
-								|CÓ QUÀ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy Note5
-							a(href="#")
-								.box-deposit
-									|ĐẶT TRƯỚC
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Iphone6 Plus
-							a(href="#")
-								.box-emp
-									|TẠM HẾT
-					.tab-prd.prd-img-blk
-						.col-prd-itm
-							a(href="#")
-								img(alt="")
-								p.txt-name-prd LG G4 Stylelus11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-dec-price
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt="")
-								p.txt-name-prd Blackberry classic 11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-new
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt="")
-								p.txt-name-prd Samsung Galaxy E5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-hot
-							.box-present
-								<i class="fa fa-gift" aria-hidden="true"></i>
-								|CÓ QUÀ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy Note5
-							a(href="detail.html")
-								.box-deposit
-									|ĐẶT TRƯỚC
-						.col-prd-itm
-							a(href="#")
-								img(alt=" ")
-								p.txt-name-prd Iphone6 Plus
-							a(href="#")
-								.box-emp
-									|TẠM HẾT
-				div(class="tab-pane" id="prd-chip")
-					a(href="category.html").view-all
-						p Xem tất cả hàng xả kho giá rẽ &rsaquo;
-					.tab-prd.prd-img-blk
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Sony Xperia M4 Aqua Dual
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-dec-price
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Blackberry classic 11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy E5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy Note5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Iphone6 Plus
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-					.tab-prd.prd-img-blk
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt="")
-								p.txt-name-prd LG G4 Stylelus11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-dec-price
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Blackberry classic 11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy E5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" " )
-								p.txt-name-prd Samsung Galaxy Note5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Iphone6 Plus
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-	.hm-sec-blk
-		.container
-			.img-prd-hotphone
-				.row
-					.col-md-4
-						a(href="category.html")
-							figure
-								img(alt=" " )
-					.col-md-4
-						a(href="category.html")
-							figure
-								img(alt=" " )
-					.col-md-4
-						a(href="category.html")
-							figure
-								img(alt=" " )
-	.hm-sec-blk
-		.container
-			.row
-				.col-md-9
-					.hot-accessory-itm
-						ul(class="nav nav-tabs" role="tablist")
-							li(role="presentation" class="active")
-								a(href="#new-accessory" role="tab" data-toggle="tab")
-									|PHỤ KIỆN MỚI VỀ
-							li(role="presentation")
-								a(href="#apple-accessory" role="tab" data-toggle="tab")
-									|PHỤ KIỆN APPLE
-						div(class="tab-content tab-blk")
-							div(role="tabpanel" class="tab-pane active" id="new-accessory")
-								.row.prd-img-blk
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-											span.promo.promo-dec-price
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-											span.promo.promo-new
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-											span.promo.promo-hot
-											span.box-present
-												<i class="fa fa-gift" aria-hidden="true"></i>
-												|CÓ QUÀ
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-								.row.prd-img-blk
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-											span.promo.promo-dec-price
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-											span.promo.promo-new
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-											span.promo.promo-hot
-											span.box-present
-												<i class="fa fa-gift" aria-hidden="true"></i>
-												|CÓ QUÀ
-									.col-md-3
-										.prd-ct-sub
-											a(href="detail.html")
-												img(alt=" ")
-												p.txt-name-prd LG G4 Stylelus11
-											p 
-												span.txt-new-price 6.490.000 đ 
-												span.txt-old-price 6.790.000 đ
-							div(role="tabpanel" class="tab-pane" id="apple-accessory")
-								a(href="#")
-									.row.prd-img-blk
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-												span.promo.promo-dec-price
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-									.row.prd-img-blk
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p LG G4 Stylelus11
-													p.txt-name-prd 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-												span.promo.promo-dec-price
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-										.col-md-3
-											.prd-ct-sub
-												a(href="detail.html")
-													img(alt=" ")
-													p.txt-name-prd LG G4 Stylelus11
-													p 
-														span.txt-new-price 6.490.000 đ 
-														span.txt-old-price 6.790.000 đ
-				.col-md-3
-					.accessory-blk
-						.accessory-itm
-							.row
-								.accessory-left.col-md-6
-									a(href="detail.html")
-										p.cate-acces phụ kiện
-										p.name-acces Blackberry
-								.accessory-name.col-md-6
-									a(href="detail.html")
-										p.cate-acces phụ kiện
-										p.name-acces Samsung
-						.accessory-itm
-							.row
-								.accessory-left.col-md-6
-									a(href="detail.html")
-										p.cate-acces linh kiện
-										p.name-acces Blackberry
-								.accessory-name.col-md-6
-									a(href="detail.html")
-										p.cate-acces phụ kiện
-										p.name-acces Ipad
-						.accessory-itm
-							.row
-								.accessory-left.col-md-6
-									a(href="detail.html")
-										p.cate-acces sim card
-										p.name-acces sim 3g / 10 số
-								.accessory-name.col-md-6
-									a(href="detail.html")
-										p.cate-acces phụ kiện
-										p.name-acces LG
-					.banner-itm
-						a(href="#")
-							figure
-								img(alt=" ")
-	.hm-sec-blk
-		.container
-			ul(class="nav nav-tabs" role="tablist")
-				li(role="presentation" class="active")
-					a(href="#tablet" role="tab" data-toggle="tab")
-						|MÁY TÍNH BẢNG
-			div(class="tab-content tab-blk")
-				div(role="tabpanel" class="tab-pane active" id="tablet")
-					a(href="category.html").view-all
-						p Xem tất cả các máy tính bảng &rsaquo;
-					.tab-prd.prd-img-blk
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Sony Xperia M4 Aqua Dual
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-dec-price
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Blackberry classic 11
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-new
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy E5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.promo.promo-hot
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Samsung Galaxy Note5
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-							span.box-present
-								<i class="fa fa-gift" aria-hidden="true"></i>
-								|CÓ QUÀ
-						.col-prd-itm
-							a(href="detail.html")
-								img(alt=" ")
-								p.txt-name-prd Iphone6 Plus
-							p 
-								span.txt-new-price 6.490.000 đ 
-								span.txt-old-price 6.790.000 đ
-	.hm-sec-blk
-		.registy-blk 
-			.container
-				.row
-					.col-md-9
-						p.txt-regis-title 
-							|ĐĂNG KÍ NHẬN TIN KHUYẾN MÃI TỪ 
-							span.txt-logo 365MOBILE.VN
-						p Nếu bạn có thắc mắc, vui lòng liên hệ 
-							b HOTLINE: 0979.365.365 
-							|để được hỗ trợ tốt nhất từ 365mobile
-						.form-regis
-							input(type="input" id="name-cus" class="input-customer-info" name="name-cus" placeholder="Tên quý khách")
-							input(type="input" id="email-cus" class="input-customer-info" name="email-cus" placeholder="Email nhận tin")
-							button(type="submit" class="btn-regis")
-								|ĐĂNG KÝ NHẬN TIN
-					.col-md-3
+			- each detail in data[1]
+					.col-prd-itm
+						a(href="javascripy:;")
+							if (detail.image !== '')
+								img.img-prd(src="#{sails.getBaseurl()}/images/products/#{detail.image}", alt="product")
+								input(type="hidden", value="#{detail.image}", name="image")
+							p.txt-name-prd #{detail.nameprd}
+						p 
+							span.txt-new-price #{detail.price}
+							
