--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
 		if locals.title
 			title= title
 		else
-			title New Sails App
+			title Hotdeal.vn
 
 		// Viewport mobile tag for sensible mobile support
 		meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1")
@@ -33,6 +33,7 @@ html
 		link(rel="stylesheet", href="/styles/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/styles/css/custom.css")
 		link(rel="stylesheet", href="/styles/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/styles/css/header.css")
 		link(rel="stylesheet", href="/styles/css/main.css")
 		link(rel="stylesheet", href="/styles/css/morris.css")
 		link(rel="stylesheet", href="/styles/css/sb-admin-rtl.css")
@@ -131,9 +132,6 @@ html
 		script(src="/js/dependencies/sails.io.js")
 		script(src="/js/dependencies/aajquery.js")
 		script(src="/js/dependencies/bootstrap.min.js")
-		script(src="/js/dependencies/morris-data.js")
-		script(src="/js/dependencies/morris.js")
-		script(src="/js/dependencies/morris.min.js")
 		script(src="/js/dependencies/raphael.min.js")
 		script(src="/js/dependencies/start.js")
 		// SCRIPTS END
