--- a/views/cate/index.jade
+++ b/views/cate/index.jade
@@ -1,3 +1,6 @@
+block vars
+	-title="Category Hotdeal.vn"
+
 extends ../layoutadmin
 block body
 	h2(style="display:inline-block;") Your category product list
