--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -1,4 +1,4 @@
 // JS: SCRIPTS
-script(src="js/libs.js")
-script(src="js/plugins.js")
-script(src="js/start.js")
+//- script(src="js/libs.js")
+//- script(src="js/plugins.js")
+//- script(src="js/start.js")
