--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -1,40 +1,38 @@
 block vars
-  title Home - novaland.biz
-  showTop false
+	title Home - novaland.biz
+	showTop false
 doctype html
 //[if IE 8]><html lang="en" class="no-js ie ie8"><![endif]
 //[if IE 9]><html lang="en" class="no-js ie ie9"><![endif]
 //[if gt IE 9]><!
 html(class="no-js", lang="en")
-  //<![endif]
-  head
-    meta(charset="utf-8")
-    title=title
-    meta(name="description", content="")
-    meta(name="keywords", content="")
-    meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
-    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    //-- Call font
-    link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,800italic,400,700,800,300&subset=latin,vietnamese', rel='stylesheet', type='text/css')
-    link(rel="shortcut icon", href="icons/favicon.ico", type="image/x-icon")
-    // STYLES
-    link(rel="stylesheet", href="/styles/css/main.css")
-    //--script(src="js/modernizr.js")
-  body
-    //- include ../includes/header.jade
-    section.main
-      block main
-    //- include ../includes/footer.jade
-    include ../includes/scripts.jade
+	//<![endif]
+	head
+		meta(charset="utf-8")
+		title=title
+		meta(name="description", content="")
+		meta(name="keywords", content="")
+		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
+		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		//-- Call font
+		link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,800italic,400,700,800,300&subset=latin,vietnamese', rel='stylesheet', type='text/css')
+		link(rel="shortcut icon", href="icons/favicon.ico", type="image/x-icon")
+		// STYLES
+		link(rel="stylesheet", href="/styles/css/bootstrap.min.css")
+		link(rel="stylesheet", href="/styles/css/main.css")
+		link(rel="stylesheet", href="/styles/css/header.css")
+		//--script(src="js/modernizr.js")
+	body
+		include ../includes/header.jade
+		section.main
+			block main
+		include ../includes/footer.jade
+		include ../includes/scripts.jade
 
-
-  // SCRIPTS
-  script(src="/js/dependencies/sails.io.js")
-  script(src="/js/dependencies/aajquery.js")
-  script(src="/js/dependencies/bootstrap.min.js")
-  script(src="/js/dependencies/morris-data.js")
-  script(src="/js/dependencies/morris.js")
-  script(src="/js/dependencies/morris.min.js")
-  script(src="/js/dependencies/raphael.min.js")
-  script(src="/js/dependencies/start.js")
-  // SCRIPTS END
+	// SCRIPTS
+	script(src="/js/dependencies/sails.io.js")
+	script(src="/js/dependencies/aajquery.js")
+	script(src="/js/dependencies/bootstrap.min.js")
+	script(src="/js/dependencies/raphael.min.js")
+	script(src="/js/dependencies/start.js")
+	// SCRIPTS END
